2008-07-05 [colin]	3.5.0cvs11

	* src/news.c
	* src/news_gtk.c
		Provide ability to rename newsgroups. Closes
		bug 1444, 'Add GUI option for renaming 
		newsgroups'. Patch by Pawel Pekala

2008-07-05 [colin]	3.5.0cvs10

	* src/plugins/pgpcore/passphrase.c
	* src/plugins/pgpcore/prefs_gpg.c
	* src/plugins/pgpcore/select-keys.c
		Simplify GTK includes (with the advantage
		of compiling against GTK+2.13); patch by
		Charles A Edwards

2008-07-05 [colin]	3.5.0cvs9

	* src/wizard.c
		Add SSL client certificates

2008-07-05 [colin]	3.5.0cvs8

	* src/prefs_account.c
	* src/common/session.h
		Fix warnings
	* src/common/ssl.c
		Add one path for certs

2008-07-05 [colin]	3.5.0cvs7

	* src/prefs_account.c
		Fix no-ssl build

2008-07-04 [colin]	3.5.0cvs6

	* src/common/ssl.c
	* src/common/ssl.h
	* src/common/ssl_certificate.c
		Workaround distro bugs and fix certificate checking
		with OpenSSL

2008-07-04 [colin]	3.5.0cvs5

	* src/filtering.c
	* src/common/ssl_certificate.c
	* src/common/ssl_certificate.h
	* src/etpan/imap-thread.c
	* src/etpan/nntp-thread.c
		Fix some leaks, thanks to Martin Zwickel
		Rename gnutls functions that do the same
		as OpenSSL ones, to avoid symbol clashing
		when Claws is built against GnuTLS and
		libetpan against OpenSSL

2008-07-04 [paul]	3.5.0cvs4

	* src/prefs_account.c
		remove 1 forgotten '.'

2008-07-04 [paul]	3.5.0cvs3

	* src/prefs_account.c
		layout/engrish fixes to the 'Client
		certificates' frame

2008-07-03 [colin]	3.5.0cvs2

	* src/imap.c
	* src/news.c
	* src/pop.c
	* src/prefs_account.c
	* src/prefs_account.h
	* src/prefs_common.c
	* src/send_message.c
	* src/common/session.c
	* src/common/session.h
	* src/common/smtp.c
	* src/common/smtp.h
	* src/common/socket.h
	* src/common/ssl.c
	* src/common/ssl.h
	* src/common/ssl_certificate.c
	* src/common/ssl_certificate.h
	* src/etpan/imap-thread.c
	* src/etpan/nntp-thread.c
	* src/gtk/inputdialog.c
		Add support for SSL client certificates (either PEM files